--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1325,8 +1325,8 @@ year = {2019}
 
 @INPROCEEDINGS{7004215,
 	author={T. {Wang} and S. {Oral} and Y. {Wang} and B. {Settlemyer} and S. {Atchley} and W. {Yu}},
-	booktitle={{2014 IEEE International Conference on Big Data (Big Data)}}, 
-	title={BurstMem: A high-performance burst buffer system for scientific applications}, 
+	booktitle={{2014 IEEE International Conference on Big Data (Big Data)}},
+	title={BurstMem: A high-performance burst buffer system for scientific applications},
 	year={2014},
 	volume={},
 	number={},
@@ -1335,10 +1335,10 @@ year = {2019}
 
 
 @misc{nextgenio2016,
-	author = {Farsarakis E., Weiland M., Jackson A., Parson M},
-	title = {{Monitoring and evaluating I/O performance of HPC systems}}, 
+	author = {Farsarakis E. and Weiland M. and Jackson A. and Parson M},
+	title = {{Monitoring and evaluating I/O performance of HPC systems}},
 	location = {Stockholm, Sweden},
-	publisher = {EASC}, 
+	publisher = {EASC},
 	year= {2016},
 	url = {http://www.nextgenio.eu/sites/default/files/documents/publications/EASC2016%20IO%20talk.pdf}
 }
@@ -1356,7 +1356,6 @@ year = {2019}
 	organization	 = {ISC events},
 	location	 = {Leipzig},
 	isbn	 = {978-3-319-07517-4},
-	%doi	 = {https://doi.org/10.1007/978-3-319-07518-1_16},
 	abstract	 = {Performance analysis and optimization of high-performance I/O systems is a daunting task. Mainly, this is due to the overwhelmingly complex interplay of the involved hardware and software layers. The Scalable I/O for Extreme Performance (SIOX) project provides a versatile environment for monitoring I/O activities and learning from this information. The goal of SIOX is to automatically suggest and apply performance optimizations, and to assist in locating and diagnosing performance problems. In this paper, we present the current status of SIOX. Our modular architecture covers instrumentation of POSIX, MPI and other high-level I/O libraries; the monitoring data is recorded asynchronously into a global database, and recorded traces can be visualized. Furthermore, we offer a set of primitive plug-ins with additional features to demonstrate the flexibility of our architecture: A surveyor plug-in to keep track of the observed spatial access patterns; an fadvise plug-in for injecting hints to achieve read-ahead for strided access patterns; and an optimizer plug-in which monitors the performance achieved with different MPI-IO hints, automatically supplying the best known hint-set when no hints were explicitly set. The presentation of the technical status is accompanied by a demonstration of some of these features on our 20 node cluster. In additional experiments, we analyze the overhead for concurrent access, for MPI-IO’s 4-levels of access, and for an instrumented climate application. While our prototype is not yet full-featured, it demonstrates the potential and feasibility of our approach.},
 }
 
@@ -1377,7 +1376,6 @@ year = {2019}
 	volume={},
 	number={},
 	pages={9-17},
-	%keywords={input-output programs;natural sciences computing;parallel processing;modular HPC IO characterization;Darshan;high-performance computing;large-scale HPC platforms;IO workloads;IO profiling tools;scientific applications;computing platforms;modular instrumentation methods;Instruments;Libraries;Buffer storage;Production systems;Writing;Runtime;Registers},
 	doi={10.1109/ESPT.2016.006},
 	ISSN={null},
 	month={Nov}
@@ -1408,8 +1406,8 @@ year = {2019}
 
 @INPROCEEDINGS{7103433,
 	author={D. H. {Ahn} and J. {Garlick} and M. {Grondona} and D. {Lipari} and B. {Springmeyer} and M. {Schulz}},
-	booktitle={{2014 43rd International Conference on Parallel Processing Workshops}}, 
-	title={{Flux: A Next-Generation Resource Management Framework for Large HPC Centers}}, 
+	booktitle={{2014 43rd International Conference on Parallel Processing Workshops}},
+	title={{Flux: A Next-Generation Resource Management Framework for Large HPC Centers}},
 	year={2014},
 	volume={},
 	number={},
@@ -1435,14 +1433,11 @@ year = {2019}
 }
 
 
-Betke, E., Kunkel. J.: Semi-automatic Assessment of I/O Behavior by Inspecting the Individual Client-Node Timelines — An Explorative Study on 10^6 Jobs, ISC 2020 (Submission accepted, not published yet).
-
 @INPROCEEDINGS{iocats2020,
 	author={Eugen Betke, Julian Kunkel},
-	booktitle={{2014 43rd International Conference on Parallel Processing Workshops}}, 
-	title={{Semi-automatic Assessment of I/O Behavior by Inspecting the Individual Client-Node Timelines — An Explorative Study on $10^6$ Jobs}}, 
+	booktitle={{2014 43rd International Conference on Parallel Processing Workshops}},
+	title={{Semi-automatic Assessment of I/O Behavior by Inspecting the Individual Client-Node Timelines — An Explorative Study on $10^6$ Jobs}},
 	conference= {ISC'20},
 	organization= {ISC Events},
-	year=2020,
-	note=(Submission accepted, not published yet),
+	year=2020
 }
