--- a/main.tex
+++ b/main.tex
@@ -264,10 +264,10 @@ In our previous work, we computed three high-level metrics per job that aid user
 	\item \textbf{Job-I/O-Problem-Time} is the fraction of job runtime that is I/O-intensive; it is approximated by the fractions of segments that are considered I/O intensive.
 \end{itemize}
 
-\begin{figure}
+\begin{figure}[b]
 	\centering
 	\includegraphics[width=2.02in,height=2.52in]{./media/image4.png}
-	\caption{Example Job Metric Level View. Score is the sum of individual node scores.}
+	\caption{Example job-level metric. Score is the sum of all node scores.}
 	\label{fig:seg_example}
 \end{figure}
 
