--- a/main.tex
+++ b/main.tex
@@ -264,7 +264,7 @@ In our previous work, we computed three high-level metrics per job that aid user
 	\item \textbf{Job-I/O-Problem-Time} is the fraction of job runtime that is I/O-intensive; it is approximated by the fractions of segments that are considered I/O intensive.
 \end{itemize}
 
-\begin{figure}[b]
+\begin{figure}[!bt]
 	\centering
 	\includegraphics[width=2.02in,height=2.52in]{./media/image4.png}
 	\caption{Example job-level metric. Score is the sum of all node scores.}
