--- a/bibliography.bib
+++ b/bibliography.bib
@@ -64,6 +64,12 @@ full names.
 
 references for the IEEEtran.bst documentation
 IEEEtran homepage
+@techreport{lockwood2018tokio,
+  title={{TOKIO on ClusterStor: Connecting standard tools to enable holistic I/O performance analysis}},
+  author={Lockwood, Glenn K and Wright, Nicholas J and Snyder, Shane and Carns, Philip and Brown, George and Harms, Kevin},
+  year={2018},
+  institution={Lawrence Berkeley National Lab.(LBNL), Berkeley, CA (United States)}
+}
 
 @inproceedings{TFAPIKBBCF19,
 	author	 = {Julian Kunkel and Eugen Betke and Matt Bryson and Philip Carns and Rosemary Francis and Wolfgang Frings and Roland Laifer and Sandra Mendez},
