--- a/main.tex
+++ b/main.tex
@@ -1884,9 +1884,7 @@ Having more data, a more precise computation.
 The integration of the awareness of I/O performance produces better, but still not sophisticated results.
 We suppose that the I/O phase awareness is the missing feature for success.
 
-The final algorithm that detects phases and differentiates performance values produces at first sight clean results.
-Due to the huge amount of clusters and lack of automatic evaluation tools, we can not prove this statement for all clustres.
-
+The final algorithm that detects phases and differentiates performance values produces at first sight clean results.Due to the huge amount of clusters and lack of automatic evaluation tools, we can not prove this statement for all clustres.
 \subsection{Future work}
 We see a high potential in the new clustering algorithm, but it requires some improvements to be useful.
 Although groping seems to work well, the algorithm has at least one serious issue.
@@ -1899,13 +1897,11 @@ Therefore we need at least three further functions, that filter irrelevant clust
 %\begin{thebibliography}{99}
 %\bibitem{item1}
 %\fontsize{10pt}{12.0pt}\selectfont Ahn, D., Garlick, J., Grondona, M., Lipari, D., Springmeyer, B., Schulz, M.: Flux: $``$A next-generation resource management framework for large hpc centers.$"$  pp. 9-17 (09 2014). \href{https://doi.org/10.1109/ICPPW.2014.15}{\textcolor[HTML]{1155CC}{\ul{https://doi.org/10.1109/ICPPW.2014.15}}}
-
 %\bibitem{item2}
 %\fontsize{10pt}{12.0pt}\selectfont DDN, $``$Worlds's most advanced application aware I/O acceleration solutions.$"$  \href{http://www.ddn.com/products/infinite-memory-engine-ime14k}{\textcolor[HTML]{1155CC}{\ul{ http://www.ddn.com/products/infinite-memory-engine-ime14k}}}
 
 %\bibitem{item3}
 %\fontsize{10pt}{12.0pt}\selectfont IBM, $``$Flash Storage.$"$ ,\href{http://www-03.ibm.com/systems/storage/flash}{\textcolor[HTML]{1155CC}{\ul{ http://www-03.ibm.com/systems/storage/flash}}}
-
 %\bibitem{item4}
 %\fontsize{10pt}{12.0pt}\selectfont Kove Corporation, $``$about xpress disk (xpd)$"$ , 2015
 
